syntax = "proto3";
package cn.rapidtsdb.tsdb.model.proto;

import "TSDataMessage.proto";

message ProtoTSQuery {
    string metrics = 1;
    int64 startTime = 2;
    int64 endTime = 3;
    string aggregator = 4;
    string downSampler = 5;
    repeated ProtoTSTag tags = 6;
}


